some images deleted

--- a/css/main.css
+++ b/css/main.css
@@ -1795,6 +1795,7 @@ header .logo a {
 	padding-top: 12rem;
 	padding-bottom: 12rem;
 }
+/* change this for portfolio section */
 #portfolio .folio-item {
 	padding: 0;
 	position: relative;
