--- a/css/main.css
+++ b/css/main.css
@@ -1338,7 +1338,7 @@ header .logo a {
 }
 .intro-content h5 {
 	color: #cc005f;
-	font-family: "poppins-bold", sans-serif;
+	font-family: Arial, "poppins-bold", sans-serif;
 	font-size: 2.3rem;
 	line-height: 1.565;
 	margin-bottom: 0;
