--- a/new-site/src/app/app.component.html
+++ b/new-site/src/app/app.component.html
@@ -8,8 +8,11 @@
     </head>
 
     <body>
-        <a [routerLink]="[ '/certificates' ]">Certificates</a>
-        <a [routerLink]="[ '/homepage' ]">Home</a>
+        <a routerLink="/homepage">About me</a>
+        <a routerLink="/experience">Experience</a>
+        <a routerLink="/skills">Skills</a>
+        <a routerLink="/projects">Projects</a>
+        <a routerLink="/certificates">Certification</a>
         <router-outlet></router-outlet>
 </body>
 
