custom css for nav bar

--- a/new-site/src/app/app.component.html
+++ b/new-site/src/app/app.component.html
@@ -17,8 +17,8 @@
     <body>
         
         <!-- Navigation Bar starts here -->
-        <nav class=" main-nav-wrap navbar navbar-dark bg-dark justify-content-center flex-column flex-sm-row">
-            <a class="navbar-brand" routerLink="homepage"> Susanta </a>
+        <nav class="navbar navbar-dark bg-dark justify-content-center flex-column flex-sm-row">
+            <a class="navbar-brand" routerLink="homepage"> SUSANTA  </a>
             <a class="nav-item nav-link" routerLink="/homepage"> About me </a>
             <a class="nav-item nav-link" routerLink="/experience"> Experience </a>
             <a class="nav-item nav-link" routerLink="/skills"> Skills </a>
