--- a/new-site/src/app/app.component.html
+++ b/new-site/src/app/app.component.html
@@ -23,9 +23,9 @@
             <a class="nav-item nav-link" routerLink="/experience"> Experience </a>
             <a class="nav-item nav-link" routerLink="/skills"> Skills </a>
             <a class="nav-item nav-link" routerLink="/projects"> Projects </a>
-            <a class="nav-item nav-link" routerLink="/certificates"> Certification </a>
+            <a class="nav-item nav-link" routerLink="/certificates"> Certifications </a>
         </nav>
-    
+        <!-- Navigation Bar ends here -->
        
         
         <router-outlet></router-outlet>
