homepage layout set

--- a/new-site/src/app/homepage/homepage.component.html
+++ b/new-site/src/app/homepage/homepage.component.html
@@ -1,7 +1,20 @@
-<p>
-  homepage works!
-</p>
-<app-about-me></app-about-me>
-<app-experience></app-experience>
-<app-skills></app-skills>
-<app-projects></app-projects>
+<!-- Homepage component -->
+<div class="container">
+	<div class="row">
+		<p>
+			homepage works!
+		</p>
+	</div>
+	<div class="row">
+		<app-about-me></app-about-me>
+	</div>
+	<div class="row">
+		<app-experience></app-experience>
+	</div>
+	<div class="row">
+		<app-skills></app-skills>
+	</div>
+	<div class="row">
+		<app-projects></app-projects>
+	</div>
+</div>
