--- a/new-site/src/app/app.component.html
+++ b/new-site/src/app/app.component.html
@@ -1,34 +1,53 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <!-- Meta tags -->
-        <meta charset="utf-8" />
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="description" content="Portfolio website, Personel website">  
-        <meta name="author" content="Susanta">
-        
-        <!-- Tab title -->
-        <title>Susanta</title>
 
-        <!-- For mobile screens -->
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-    </head>
+<head>
+    <!-- Meta tags -->
+    <meta charset="utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="description" content="Portfolio website, Personel website">
+    <meta name="author" content="Susanta">
 
-    <body>
-        
-        <!-- Navigation Bar starts here -->
-        <nav class="navbar navbar-dark bg-dark justify-content-center flex-column flex-sm-row">
-            <a class="navbar-brand" routerLink="homepage"> SUSANTA  </a>
+    <!-- Tab title -->
+    <title>Susanta</title>
+
+    <!-- For mobile screens -->
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+
+<body>
+
+    <!-- Navigation Bar starts here -->
+    <!-- <nav class="navbar navbar-dark bg-dark justify-content-center flex-column flex-sm-row">
+
+        <a class="navbar-brand" routerLink="homepage"> SUSANTA </a>
+        <a class="nav-item nav-link" routerLink="/homepage"> About me </a>
+        <a class="nav-item nav-link" routerLink="/experience"> Experience </a>
+        <a class="nav-item nav-link" routerLink="/skills"> Skills </a>
+        <a class="nav-item nav-link" routerLink="/projects"> Projects </a>
+        <a class="nav-item nav-link" routerLink="/certificates"> Certifications </a>
+
+    </nav> -->
+    <!-- Navigation Bar ends here -->
+    
+    <nav class="navbar navbar-dark bg-dark justify-content-center navbar-expand-lg">
+        <a class="navbar-brand" routerLink="homepage"> SUSANTA </a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDiv"
+            aria-controls="navbarTogglerDiv" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarTogglerDiv">
             <a class="nav-item nav-link" routerLink="/homepage"> About me </a>
             <a class="nav-item nav-link" routerLink="/experience"> Experience </a>
             <a class="nav-item nav-link" routerLink="/skills"> Skills </a>
             <a class="nav-item nav-link" routerLink="/projects"> Projects </a>
             <a class="nav-item nav-link" routerLink="/certificates"> Certifications </a>
-        </nav>
-        <!-- Navigation Bar ends here -->
-       
-        
-        <router-outlet></router-outlet>
+       </div> 
+    </nav>
+
+    <router-outlet></router-outlet>
 </body>
 
 </html>
