--- a/new-site/src/app/app.component.html
+++ b/new-site/src/app/app.component.html
@@ -39,7 +39,7 @@
         </button>
 
         <div class="collapse navbar-collapse" id="navbarTogglerDiv">
-            <a class="nav-item nav-link" routerLink="/homepage"> About me </a>
+            <a class="nav-item nav-link" routerLink="/about-me"> About me </a>
             <a class="nav-item nav-link" routerLink="/experience"> Experience </a>
             <a class="nav-item nav-link" routerLink="/skills"> Skills </a>
             <a class="nav-item nav-link" routerLink="/projects"> Projects </a>
