basic bio section template done

--- a/new-site/src/app/homepage/about-me/about-me.component.html
+++ b/new-site/src/app/homepage/about-me/about-me.component.html
@@ -1,8 +1,58 @@
 <p>
-  about-me works!
+	about-me works!
 </p>
-<div id="container">
-	<div id="row">
-		
+<!-- About me section starts here -->
+<div class="container" id="about-me-section">
+	<div class="row">
+		<!-- Profile picture section -->
+		<div class="col-md-6" id="profile-pic">
+			<img src="../../../assets/profile.JPG" id="profile-img" class="img-responsive profile-circle" alt="Profile image" />
+		</div>
+		<!-- profile picture section ends here -->
+
+		<!-- Name section starts here -->
+		<div class="col-md-6" id="name-section">
+			<div class="row" id="heading-name">
+				<h1>Susanta Biswas</h1>
+			</div>
+
+			<div class="row" id="social-links">
+				<ul id="social-icons">
+					<li><a href="https://github.com/susantabiswas">
+							<fa-icon [icon]="['fab', 'github']" size="4x" id="github"></fa-icon>
+					</a></li>
+					<li><a href="https://www.linkedin.com/in/susantab/">
+							<fa-icon [icon]="['fab', 'linkedin']" size="4x" id="linkedin"></fa-icon>
+					</a></li>
+					<li><a href="https://www.quora.com/profile/Susanta-Biswas-9">
+							<fa-icon [icon]="['fab', 'quora']" size="4x" id="quora"></fa-icon>
+					</a></li>
+				</ul>
+
+
+
+
+
+			</div>
+		</div>
+		<!-- Name section ends here -->
 	</div>
+	<br><br>
+	<!-- Bio section starts here -->
+	<div class="row" id="bio-section">
+		<p>
+			I am Susanta Biswas, a senior undergraduate in Computer Science and Engineering at National Institute of Technology
+			Durgapur.
+			I am broadly interested in Machine Learning, Computer Vision , Sequence models and their applications.
+		</p>
+	</div>
+	<!-- Bio section ends here -->
+
+	<!-- Bio footer starts here-->
+	<div class="row" id="bio-footer">
+
+	</div>
+	<!-- Bio footer ends here -->
 </div>
+
+<!-- About me section ends here -->
