--- a/new-site/src/app/homepage/about-me/about-me.component.html
+++ b/new-site/src/app/homepage/about-me/about-me.component.html
@@ -1,58 +1,99 @@
-<p>
-	about-me works!
-</p>
 <!-- About me section starts here -->
 <div class="container" id="about-me-section">
 	<div class="row">
-		<!-- Profile picture section -->
-		<div class="col-md-6" id="profile-pic">
-			<img src="../../../assets/profile.JPG" id="profile-img" class="img-responsive profile-circle" alt="Profile image" />
+		<div class="col-md-6" id="profile-section">
+			<br><br><br>
+			<!-- Profile picture section -->
+			<div class="col-md-4 offset-md-4" id="profile-pic">
+				<img src="../../../assets/profile.JPG" id="profile-img" class="img-responsive profile-circle" alt="Profile image" />
+			</div>
+			<!-- profile picture section ends here -->
 		</div>
-		<!-- profile picture section ends here -->
 
 		<!-- Name section starts here -->
 		<div class="col-md-6" id="name-section">
 			<div class="row" id="heading-name">
-				<h1>Susanta Biswas</h1>
+				<div class="col-md-12">
+					<p>Susanta Biswas</p>
+				</div>
 			</div>
 
-			<div class="row" id="social-links">
-				<ul id="social-icons">
-					<li><a href="https://github.com/susantabiswas">
-							<fa-icon [icon]="['fab', 'github']" size="4x" id="github"></fa-icon>
-					</a></li>
-					<li><a href="https://www.linkedin.com/in/susantab/">
-							<fa-icon [icon]="['fab', 'linkedin']" size="4x" id="linkedin"></fa-icon>
-					</a></li>
-					<li><a href="https://www.quora.com/profile/Susanta-Biswas-9">
-							<fa-icon [icon]="['fab', 'quora']" size="4x" id="quora"></fa-icon>
-					</a></li>
-				</ul>
+			<!-- Social media icon links -->
+			<div class="row" id="bio-section">
+				<div class="container">
+					<p>
+						I am Susanta Biswas, a senior undergraduate in Computer Science and Engineering at National Institute of
+						Technology Durgapur.
+						I am broadly interested in Machine Learning, Computer Vision , Sequence models and their applications.
+					</p>
+					<p>
+						&emsp;I love exploring and learning about new interesting things that excite me. I'm interested in solving
+						machine learning problems which can help solve real world problems.
+						I like participating in competitive machine learning challenges. In my free time I enjoy reading manga and
+						watching anime.
+					</p>
+				</div>
 
+				<!-- Bio footer starts here-->
+				<div class="container">
+					<div class="row" id="bio-footer">
+						<div class="col-md-6">
+							<button type="button" class="btn btn-secondary btn-lg">Download Resume</button>
+						</div>
+					</div>
+				</div>
+				<!-- Bio footer ends here -->
 
+				<br><br><br>
+				<!-- Bio section starts here -->
+				<div class="container">
+					<div class="row" id="social-links">
+						<div class="col-md-12">
+							<ul id="social-icons">
+								<li>
+									<a href="https://github.com/susantabiswas">
+										<fa-icon [icon]="['fab', 'github']" size="2x" id="github"></fa-icon>
+									</a>
+								</li>
+								<li>
+									<a href="https://www.linkedin.com/in/susantab/">
+										<fa-icon [icon]="['fab', 'linkedin']" size="2x" id="linkedin"></fa-icon>
+									</a>
+								</li>
+								<li>
+									<a href="https://www.quora.com/profile/Susanta-Biswas-9">
+										<fa-icon [icon]="['fab', 'quora']" size="2x" id="quora"></fa-icon>
+									</a>
+								</li>
+								<li>
+									<a href="mailto:susantasky@gmail.com">
+										<fa-icon [icon]="['fas', 'envelope']" size="2x" id="envelope"></fa-icon>
+									</a>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				<!-- Bio section ends here -->
+			</div>
+			<!-- Social media icon links ends here -->
+		</div>
+		<!-- Name section ends here -->
 
+	</div>
 
+	<div class="container">
+		<br>
+		<div class="row">
+			<div class="col-md-6" id="lower-left">
+
+			</div>
+
+			<div class="col-md-6" id="lower-right">
 
 			</div>
 		</div>
-		<!-- Name section ends here -->
 	</div>
-	<br><br>
-	<!-- Bio section starts here -->
-	<div class="row" id="bio-section">
-		<p>
-			I am Susanta Biswas, a senior undergraduate in Computer Science and Engineering at National Institute of Technology
-			Durgapur.
-			I am broadly interested in Machine Learning, Computer Vision , Sequence models and their applications.
-		</p>
-	</div>
-	<!-- Bio section ends here -->
-
-	<!-- Bio footer starts here-->
-	<div class="row" id="bio-footer">
-
-	</div>
-	<!-- Bio footer ends here -->
 </div>
 
 <!-- About me section ends here -->
