--- a/new-site/src/app/homepage/about-me/about-me.component.css
+++ b/new-site/src/app/homepage/about-me/about-me.component.css
@@ -38,3 +38,10 @@ p{
     margin-left: 10px;
     padding-left: 5px;
 }
+
+@media only screen and (max-width: 991px) and (min-width: 768px){
+    #profile-pic{
+        margin-top: 22%;
+    }    
+    
+}
