minor changes made

--- a/new-site/src/app/homepage/about-me/about-me.component.html
+++ b/new-site/src/app/homepage/about-me/about-me.component.html
@@ -2,7 +2,7 @@
 <div class="container" id="about-me-section">
 	<div class="row">
 		<div class="col-md-6" id="profile-section">
-			<br><br><br>
+			<br><br><br><br>
 			<!-- Profile picture section -->
 			<div class="col-md-4 offset-md-4" id="profile-pic">
 				<img src="../../../assets/profile.JPG" id="profile-img" class="img-responsive profile-circle" alt="Profile image" />
@@ -48,7 +48,7 @@
 				<!-- Bio section starts here -->
 				<div class="container">
 					<div class="row" id="social-links">
-						<div class="col-md-12">
+						<div class="col-md-12 offset-col-4">
 							<ul id="social-icons">
 								<li>
 									<a href="https://github.com/susantabiswas">
