--- a/new-site/src/app/homepage/about-me/about-me.component.html
+++ b/new-site/src/app/homepage/about-me/about-me.component.html
@@ -22,13 +22,18 @@
 			<div class="row" id="bio-section">
 				<div class="container">
 					<p>
-						I am Susanta Biswas, a senior undergraduate in Computer Science and Engineering at National Institute of
-						Technology Durgapur.
-						I am broadly interested in Machine Learning, Computer Vision , Sequence models and their applications.
+						I am currently working as an Associate-Projects at Cognizant, designing and developing solutions for E-commerce problems using <span id="custom">IBM Watson AI</span>. 
+						I received my Bachelor's degree in Computer Science and Engineering from <span id="custom">National Institute of Technology Durgapur</span>, where
+						I worked in <span id="custom">Computational Geometry</span> and found a deterministic polynomial time algorithm for biochromatic line segments cover
+						problem. During my B.Tech, I undertook Research internship at <span id="custom">Complex Networks Research Group</span> of <span id="custom">Indian Institute of Technology 
+						Kharagpur</span>, working
+						on Language Models for word prediction.
 					</p>
 					<p>
-						&emsp;I love exploring and learning about new interesting things that excite me. I'm interested in solving
-						machine learning problems which can help solve real world problems.
+						I am broadly interested in <span id="custom">Machine Learning, Computer Vision, Sequence Models</span> and their applications. I love exploring and learning about new interesting things that excite me.
+						I have experience with Web Technologies like <span id="custom">Angular, React, Node.js</span> etc. I'm interested in solving machine learning problems which can help solve real world problems.
+					</p>
+					<p>
 						I like participating in competitive machine learning challenges. In my free time I enjoy reading manga and
 						watching anime.
 					</p>
