--- a/new-site/src/app/homepage/about-me/about-me.component.html
+++ b/new-site/src/app/homepage/about-me/about-me.component.html
@@ -1,45 +1,59 @@
 <!-- About me section starts here -->
 <div class="container" id="about-me-section">
 	<div class="row">
+
+		<!-- Top left section starts here -->
 		<div class="col-md-6" id="profile-section">
 			<br><br><br><br>
+
 			<!-- Profile picture section -->
 			<div class="col-md-4 offset-md-4" id="profile-pic">
 				<img src="../../../assets/profile.JPG" id="profile-img" class="img-responsive profile-circle" alt="Profile image" />
 			</div>
 			<!-- profile picture section ends here -->
 		</div>
+		<!-- Top left section ends here -->
 
-		<!-- Name section starts here -->
-		<div class="col-md-6" id="name-section">
+		<!-- Right section starts here -->
+		<div class="col-md-6" id="right-section">
+			<!-- Name heading section starts here -->
 			<div class="row" id="heading-name">
 				<div class="col-md-12">
 					<p>Susanta Biswas</p>
 				</div>
 			</div>
+			<!-- Name heading section ends here -->
 
-			<!-- Social media icon links -->
+			<!-- Right side Content section starts here -->
 			<div class="row" id="bio-section">
+				<!-- Bio starts here -->
 				<div class="container">
 					<p>
-						I am currently working as an Associate-Projects at Cognizant, designing and developing solutions for E-commerce problems using <span id="custom">IBM Watson AI</span>. 
-						I received my Bachelor's degree in Computer Science and Engineering from <span id="custom">National Institute of Technology Durgapur</span>, where
-						I worked in <span id="custom">Computational Geometry</span> and found a deterministic polynomial time algorithm for biochromatic line segments cover
-						problem. During my B.Tech, I undertook Research internship at <span id="custom">Complex Networks Research Group</span> of <span id="custom">Indian Institute of Technology 
-						Kharagpur</span>, working
+						I am currently working as an Associate-Projects at Cognizant, designing and developing solutions for E-commerce
+						problems using <span id="custom">IBM Watson AI</span>.
+						I received my Bachelor's degree in Computer Science and Engineering from <span id="custom">National Institute of
+							Technology Durgapur</span>, where
+						I worked in <span id="custom">Computational Geometry</span> and found a deterministic polynomial time algorithm
+						for biochromatic line segments cover
+						problem. During my B.Tech, I undertook Research internship at <span id="custom">Complex Networks Research Group</span>
+						of <span id="custom">Indian Institute of Technology
+							Kharagpur</span>, working
 						on Language Models for word prediction.
 					</p>
 					<p>
-						I am broadly interested in <span id="custom">Machine Learning, Computer Vision, Sequence Models</span> and their applications. I love exploring and learning about new interesting things that excite me.
-						I have experience with Web Technologies like <span id="custom">Angular, React, Node.js</span> etc. I'm interested in solving machine learning problems which can help solve real world problems.
+						I am broadly interested in <span id="custom">Machine Learning, Computer Vision, Sequence Models</span> and their
+						applications. I love exploring and learning about new interesting things that excite me.
+						I have experience with Web Technologies like <span id="custom">Angular, React, Node.js</span> etc. I'm interested
+						in solving machine learning problems which can help solve real world problems.
 					</p>
 					<p>
 						I like participating in competitive machine learning challenges. In my free time I enjoy reading manga and
 						watching anime.
 					</p>
 				</div>
+				<!-- Bio ends here -->
 
-				<!-- Bio footer starts here-->
+				<!-- Download CV button starts here-->
 				<div class="container">
 					<div class="row" id="bio-footer">
 						<div class="col-md-6">
@@ -47,10 +61,11 @@
 						</div>
 					</div>
 				</div>
-				<!-- Bio footer ends here -->
+				<!-- Download CV button ends here -->
 
 				<br><br><br>
-				<!-- Bio section starts here -->
+
+				<!-- Social media icon starts here -->
 				<div class="container">
 					<div class="row" id="social-links">
 						<div class="col-md-12 offset-col-4">
@@ -79,26 +94,13 @@
 						</div>
 					</div>
 				</div>
-				<!-- Bio section ends here -->
+				<!--Social media icon ends here -->
 			</div>
-			<!-- Social media icon links ends here -->
+			<!-- Right side section ends here -->
 		</div>
-		<!-- Name section ends here -->
-
+		<!-- Right section ends here -->
 	</div>
 
-	<div class="container">
-		<br>
-		<div class="row">
-			<div class="col-md-6" id="lower-left">
-
-			</div>
-
-			<div class="col-md-6" id="lower-right">
-
-			</div>
-		</div>
-	</div>
 </div>
 
 <!-- About me section ends here -->
