basic template for skills

--- a/new-site/src/app/homepage/skills/skills.component.html
+++ b/new-site/src/app/homepage/skills/skills.component.html
@@ -1,3 +1,12 @@
-<p>
-  skills works!
-</p>
+<div id="container">
+	<div class="row">
+		<!-- Skills Heading starts here -->
+		<!-- Skills heading ends here -->
+
+		<!-- Skills intro starts here -->
+		<!-- Skills intro ends here -->
+
+		<!-- Skills listing starts here -->
+		<!-- skills listing ends here -->
+	</div>
+</div>
