profile pic cropped for size optimization

--- a/new-site/src/app/homepage/about-me/about-me.component.html
+++ b/new-site/src/app/homepage/about-me/about-me.component.html
@@ -57,7 +57,11 @@
 				<div class="container">
 					<div class="row" id="bio-footer">
 						<div class="col-md-6">
-							<button type="button" class="btn btn-secondary btn-lg">Download Resume</button>
+							<a href="https://drive.google.com/open?id=106c3wkB8XsMMWPedUBABOar7ruPrimfb" 
+								class="btn btn-dark btn-lg" target="_blank" rel="noopener noreferrer">
+									Download Resume
+								</a>
+							
 						</div>
 					</div>
 				</div>
@@ -72,22 +76,17 @@
 							<ul id="social-icons">
 								<li>
 									<a href="https://github.com/susantabiswas">
-										<fa-icon [icon]="['fab', 'github']" size="2x" id="github"></fa-icon>
+										<fa-icon [icon]="['fab', 'github']" size="3x" id="github"></fa-icon>
 									</a>
 								</li>
 								<li>
 									<a href="https://www.linkedin.com/in/susantab/">
-										<fa-icon [icon]="['fab', 'linkedin']" size="2x" id="linkedin"></fa-icon>
+										<fa-icon [icon]="['fab', 'linkedin']" size="3x" id="linkedin"></fa-icon>
 									</a>
 								</li>
 								<li>
 									<a href="https://www.quora.com/profile/Susanta-Biswas-9">
-										<fa-icon [icon]="['fab', 'quora']" size="2x" id="quora"></fa-icon>
-									</a>
-								</li>
-								<li>
-									<a href="mailto:susantasky@gmail.com">
-										<fa-icon [icon]="['fas', 'envelope']" size="2x" id="envelope"></fa-icon>
+										<fa-icon [icon]="['fab', 'quora']" size="3x" id="quora"></fa-icon>
 									</a>
 								</li>
 							</ul>
