--- a/new-site/src/app/homepage/about-me/about-me.component.css
+++ b/new-site/src/app/homepage/about-me/about-me.component.css
@@ -5,14 +5,25 @@ img{
 
 .profile-circle{
     border-radius: 0%;
-    height: 250px;
-    width: 240px;
+    height: 260px;
+    width: 230px;
 }
 
 #social-icons{
     list-style-type: none;
 }
 
+#quora{
+    color:red;
+}
+
+#linkedin{
+    color:blue;
+}
+
+#envelope{
+    color:orange
+}
 #social-icons li{
     display: inline;
     margin: 10px;
@@ -34,6 +45,7 @@ p{
 .btn{
     margin-left: 20px;
 }
+
 #social-icons{
     margin-left: 10px;
     padding-left: 5px;
@@ -47,5 +59,4 @@ p{
 
 #custom{
     color: rgb(51, 51, 255);
-    
 }
