--- a/new-site/src/app/homepage/experience/experience.component.html
+++ b/new-site/src/app/homepage/experience/experience.component.html
@@ -1,3 +1,9 @@
-<p>
-  experience works!
-</p>
+<div class="container">
+	<div class="row">
+		<div id="experience-heading">
+			<p>
+				Experience Timeline
+			</p>
+		</div>
+	</div>
+</div>
