--- a/new-site/src/app/homepage/skills/skills.component.css
+++ b/new-site/src/app/homepage/skills/skills.component.css
@@ -4,8 +4,8 @@
 
 #skills-heading{
     justify-content: center;
-    font-size: 3rem;
-    font-weight: bolder;
+    font-size: 2.5rem;
+    font-weight: bold;
     margin-left: 0px;
     padding-left: 0px;
 }
