--- a/new-site/src/app/homepage/experience/experience.component.css
+++ b/new-site/src/app/homepage/experience/experience.component.css
@@ -1,9 +1,32 @@
 #experience-heading{
-    justify-content: center;
     font-size: 2.5rem;
     font-weight: bold;
-    margin-left: 0px;
-    padding-left: 0px;
+}
+
+#timeline-post{
+    color: rgb(255, 112, 77);
+    font-weight: 500;
+}
+
+#timeline-title{
+    color: rgb(35, 192, 35);
+    font-weight: 600;
+}
+
+a.float-right{
+    color: rgb(0, 115, 230);
+    font-weight: 500;
+}
+
+@media only screen and (max-width: 991px) {
+    .timeline p{
+        float: left;
+    }  
+}
+
+h4{
+    color: rgb(0, 102, 0);
+    font-weight: 700;
 }
 
 ul.timeline {
@@ -30,7 +53,7 @@ ul.timeline > li:before {
     display: inline-block;
     position: absolute;
     border-radius: 50%;
-    border: 3px solid #22c0e8;
+    border: 3px solid rgb(77, 184, 255);
     left: 20px;
     width: 20px;
     height: 20px;
