changed heading alignment

--- a/new-site/src/app/homepage/experience/experience.component.html
+++ b/new-site/src/app/homepage/experience/experience.component.html
@@ -1,9 +1,79 @@
 <div class="container">
-	<div class="row">
-		<div id="experience-heading">
-			<p>
-				Experience Timeline
-			</p>
+	<!-- Experience heading starts here -->
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 offset-md-4" id="experience-heading">
+				<p>
+					Experience Timeline
+				</p>
+			</div>
 		</div>
 	</div>
+	<!-- Experience heading ends here -->
+
+	<!-- Timeline starts here -->
+	<!-- Work timeline starts here -->
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="col-md-6 offset-md-4">
+					<h4>Work Experience</h4>
+					<ul class="timeline">
+						<li>
+							<h5><a id="timeline-title">Cognizant, Bangalore</a></h5>
+							<a id="timeline-post">Associate - Projects</a>
+							<a class="float-right">Present - 18 September, 2018</a>
+							<p>Part of digital E-commerce team. Work as a Backend developer and
+								develop solutions and features for various E-commerce needs.
+
+							</p>
+						</li>
+						<li>
+							<h5><a id="timeline-title">Complex Networks Research Group(CNeRG), IIT Kharagpur</a></h5>
+							<a id="timeline-post">Research Intern</a>
+							<a class="float-right">May 15, 2017 - June 30, 2017</a>
+							<p>Worked in Natural Language Processing domain. Designed and created different word level and
+								character level language models for word prediction using n-gram Probabilistic model. </p>
+						</li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
+	<!-- Work experience ends here -->
+
+	<!-- Education timeline starts here -->
+	<div class="container">
+		<div class="row">
+			<div class="col-md-12">
+				<div class="col-md-6 offset-md-4">
+					<h4>Education</h4>
+					<ul class="timeline">
+						<li>
+							<h5><a id="timeline-title">National Institute of Technology Durgapur</a></h5>
+							<a id="timeline-post">B.Tech, CGPA: 8.72 / 10.0</a>
+							<a class="float-right">May, 2018 - August, 2014</a>
+							<p>
+								Did Research work in Computational Geometry domain. Developed a deterministic polynomial time algorithm for
+								bichromatic line segments
+								cover problem.
+							</p>
+						</li>
+						<li>
+							<h6><a id="timeline-title">Kendriya Vidyalaya, Kancharapara, W.B</a></h6>
+							<a id="timeline-post">Senior Secondary School, 91.6%</a>
+							<a class="float-right">March 2014 - July 2012</a>
+						</li>
+						<li>
+							<h6><a id="timeline-title">Kendriya Vidyalaya, Bagdogra, W.B</a></h6>
+							<a id="timeline-post">Secondary School, CGPA: 10.0 / 10.0</a>
+							<a class="float-right">March 2014 - July 2012</a>
+						</li>
+					</ul>
+				</div>
+
+			</div>
+		</div>
+	</div>
+	<!-- Timeline ends here -->
 </div>
