skills heading centered

--- a/new-site/src/app/homepage/skills/skills.component.html
+++ b/new-site/src/app/homepage/skills/skills.component.html
@@ -2,15 +2,14 @@
 	<!-- Skills Heading starts here -->
 	<div class="container">
 		<div class="row">
-			<div class="col-md-12 offset-md-0"c id="skills-heading">
-				<p>
-					Skills
-				</p>
+			<div class="col-md-4 offset-md-0" id="skills-heading">
+				Skills
 			</div>
 		</div>
 	</div>
 	<!-- Skills heading ends here -->
 
+	<br>
 	<!-- Skills intro starts here -->
 	<div class="container">
 		<div class="row" id="skills-desc">
@@ -40,6 +39,4 @@
 			</p>
 		</div>
 	</div>
-	<!-- skills listing ends here -->
-
 </div>
