basic project template ready

--- a/new-site/src/app/homepage/experience/experience.component.html
+++ b/new-site/src/app/homepage/experience/experience.component.html
@@ -24,7 +24,8 @@
 							<a id="timeline-post">Associate - Projects</a>
 							<a class="float-right">Present - 18 September, 2018</a>
 							<p>Part of digital E-commerce team. Work as a Backend developer and
-								develop solutions and features for various E-commerce needs.
+								develop solutions and features for various E-commerce needs. Developed 
+								solutions using IBM Watson AI.
 
 							</p>
 						</li>
