--- a/new-site/src/app/homepage/about-me/about-me.component.css
+++ b/new-site/src/app/homepage/about-me/about-me.component.css
@@ -44,6 +44,7 @@ p{
 
 .btn{
     margin-left: 20px;
+    margin-top: 10px;
 }
 
 #social-icons{
@@ -55,6 +56,13 @@ p{
     #profile-pic{
         margin-top: 22%;
     }    
+}
+
+p{
+    margin-top: 5px;
+    padding-top: 5px;
+    margin-bottom: 0px;
+    padding-bottom: 0px;
 }
 
 #custom{
