--- a/new-site/src/app/homepage/about-me/about-me.component.html
+++ b/new-site/src/app/homepage/about-me/about-me.component.html
@@ -57,11 +57,11 @@
 				<div class="container">
 					<div class="row" id="bio-footer">
 						<div class="col-md-6">
-							<a href="https://drive.google.com/open?id=106c3wkB8XsMMWPedUBABOar7ruPrimfb" 
-								class="btn btn-dark btn-lg" target="_blank" rel="noopener noreferrer">
-									Download Resume
-								</a>
-							
+							<a href="https://drive.google.com/open?id=106c3wkB8XsMMWPedUBABOar7ruPrimfb" class="btn btn-dark btn-lg" target="_blank"
+							 rel="noopener noreferrer">
+								Download Resume
+							</a>
+
 						</div>
 					</div>
 				</div>
