loops for cards

--- a/new-site/src/app/homepage/projects/projects.component.html
+++ b/new-site/src/app/homepage/projects/projects.component.html
@@ -8,220 +8,20 @@
 	<!-- Project heading ends here -->
 
 	<div class="container">
-		<!-- Row 1 starts here -->
-		<div class="row">
+		<div class="row" *ngFor="let item of createArray(5); let i = index">
 			<div class="card-deck">
 				<!-- Card 1 starts here -->
-				<div class="card">
+				<div class="card" *ngFor="let item of createArray(4); let j = index">
 					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
 					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
+						<h5 class="card-title">{{projects[i*5 + j].title}}</h5>
 						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
 							content.</p>
 						<a href="#" class="btn btn-primary">Go somewhere</a>
 					</div>
 				</div>
 				<!-- Card 1 ends here -->
-
-				<!-- Card 2 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 2 ends here -->
-
-				<!-- Card 3 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 3 ends here -->
-
-				<!-- Card 4 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 4 ends here -->
 			</div>
 		</div>
-		<!-- Row 1 ends here -->
-
-		<!-- Row 2 starts here -->
-		<div class="row">
-			<div class="card-deck">
-				<!-- Card 1 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 1 ends here -->
-
-				<!-- Card 2 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 2 ends here -->
-
-				<!-- Card 3 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 3 ends here -->
-
-				<!-- Card 4 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 4 ends here -->
-			</div>
-		</div>
-		<!-- Row 2 ends here -->
-
-		<!-- Row 3 starts here -->
-		<div class="row">
-			<div class="card-deck">
-				<!-- Card 1 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 1 ends here -->
-
-				<!-- Card 2 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 2 ends here -->
-
-				<!-- Card 3 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 3 ends here -->
-
-				<!-- Card 4 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 4 ends here -->
-			</div>
-		</div>
-		<!-- Row 3 ends here -->
-
-		<!-- Row 4 starts here -->
-		<div class="row">
-			<div class="card-deck">
-				<!-- Card 1 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 1 ends here -->
-
-				<!-- Card 2 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 2 ends here -->
-
-				<!-- Card 3 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 3 ends here -->
-
-				<!-- Card 4 starts here -->
-				<div class="card">
-					<img class="card-img-top" src="../../../assets/projects/trigger-word/6.jpg" alt="Card image cap">
-					<div class="card-body">
-						<h5 class="card-title">Card title</h5>
-						<p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-							content.</p>
-						<a href="#" class="btn btn-primary">Go somewhere</a>
-					</div>
-				</div>
-				<!-- Card 4 ends here -->
-			</div>
-		</div>
-		<!-- Row 4 ends here -->
 	</div>
 </div>
