basic layout set

--- a/new-site/src/app/certificates/certificates.component.html
+++ b/new-site/src/app/certificates/certificates.component.html
@@ -1,3 +1,12 @@
-<p>
-  certificates works!
-</p>
+<div class="container">
+	<!-- Heading starts here -->
+	<div class="row">
+		<div class="col-md-12 offset-md-5" id="cert-heading">
+			<p>Certifications</p>
+		</div>
+	</div>
+	<!-- Heading ends here -->
+
+	<!-- Certificate cards starts here -->
+	<!-- Certificate cards end here -->
+</div>
