--- a/new-site/src/app/certificates/certificates.component.html
+++ b/new-site/src/app/certificates/certificates.component.html
@@ -7,6 +7,101 @@
 	</div>
 	<!-- Heading ends here -->
 
+	<div class="container">
+		<div class="row" id="intro">
+			<div class="col-md-12 offset-3">
+				<p>Here are a some of the MOOCs that I have completed</p>
+			</div>
+		</div>
+	</div>
+
+	<div class="container">
+		<div class="row" id="intro">
+			<div class="col-md-12 offset-5">
+				<p>Deeplearning.ai</p>
+			</div>
+		</div>
+	</div>
 	<!-- Certificate cards starts here -->
+	<!-- Deep learning.ai certificates -->
+	<div class="container">
+		<div class="row">
+			<div class="card-deck">
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/1.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Deep Learning Specialization</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/specialization/NZ5MJC7R9W5R" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/2.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Sequence Models</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/WFF95YRARZBH" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="card-deck">
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/3.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Convolutional Neural Networks</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/MKVMRRMPWSQH" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+
+				<!-- Card starts here -->
+				<div class="card">
+					<img class="card-img-top" src="../../assets/certificates/4.jpg" alt="Card image cap">
+					<div class="card-body">
+						<h5 class="card-title">Improving Deep Neural Networks</h5>
+						<p class="card-text"></p>
+						<a href="https://www.coursera.org/account/accomplishments/records/95E3CJ2VBCZU" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+					</div>
+				</div>
+				<!-- Card ends here -->
+			</div>
+		</div>
+
+		<div class="row">
+				<div class="card-deck">
+					<!-- Card starts here -->
+					<div class="card">
+						<img class="card-img-top" src="../../assets/certificates/3.jpg" alt="Card image cap">
+						<div class="card-body">
+							<h5 class="card-title">Structuring Machine Learning Projects</h5>
+							<p class="card-text"></p>
+							<a href="https://www.coursera.org/account/accomplishments/records/Y4XMSPEX7447" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+						</div>
+					</div>
+					<!-- Card ends here -->
+	
+					<!-- Card starts here -->
+					<div class="card">
+						<img class="card-img-top" src="../../assets/certificates/6.jpg" alt="Card image cap">
+						<div class="card-body">
+							<h5 class="card-title">Neural Networks and Deep Learning</h5>
+							<p class="card-text"></p>
+							<a href="https://www.coursera.org/account/accomplishments/records/74TSGWGRDZ62" class="btn btn-primary" target="_blank" rel="noreferrer noopener">Details</a>
+						</div>
+					</div>
+					<!-- Card ends here -->
+				</div>
+			</div>
+	</div>
 	<!-- Certificate cards end here -->
 </div>
