--- a/new-site/src/app/certificates/certificates.component.css
+++ b/new-site/src/app/certificates/certificates.component.css
@@ -3,6 +3,16 @@
     font-weight: bold;
 }
 
+#intro{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
+#title{
+    font-size: 1.5rem;
+    font-weight: 400;
+}
+
 #project-card{
     width: 350px;
     height: 180px;
